---------------------------------------------------------------------------------------------------
Version: 17.0.3
Date: 2019-06-02
  Features:
    - Add option to disable biters reincarnate from fire death
  Changes:
  Bugfixes:
  Info:
    - remove erronous logging
---------------------------------------------------------------------------------------------------
Version: 17.0.2
Date: 2019-05-31
  Features:
  Changes:
  Bugfixes:
    - fix mod crash when biter turns in to a flaming tree
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.1
Date: 2019-05-31
  Features:
    - Add setting for enemy units chance of turning in to tree on death.
  Changes:
    - Add script interface for using the entity generation logic.
    - Tree data is obtained from data so supports modded trees (not modded tiles).
    - Tree type selection respects tree probability so tree mix should match local natural forests more.
    - Combined chance of events occuring can be greater than 100%. The ratio of values will be utilised. Below 100% chance means possibility of no event happening.
  Bugfixes:
    - Fixed incorrect tile data handling and manual adjustment code. The trees should be basically correct on all tile types now.
  Info:
    - Burning tree chance setting wording changed to make consistent with new settings.
---------------------------------------------------------------------------------------------------
Version: 17.0.0
Date: 2019-03-11
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: