@@ -2,8 +2,10 @@
 turn-to-tree-chance-percent=Turn to tree chance
 burst-into-flames-chance-percent=Turn to burning tree chance
 prevent-biters-reincarnating-from-fire-death=Prevent biters reincarnating after fire death
+tree-fire-max-hope-count=Tree fire hop max
 
 [mod-setting-description]
 turn-to-tree-chance-percent=The percent change of a biter turning in to a tree on death. Combined event chances can be greater than 100%.
 burst-into-flames-chance-percent=The percent change of a biter turning in to a burning tree on death. The fire will spread to other trees nearby. Combined event chances can be greater than 100%.
 prevent-biters-reincarnating-from-fire-death=If a biter dies from fire damage it will not reincarnate. Is to prevent possible loops with other mods.
+tree-fire-max-hope-count=How many times a tree fire can hop to another free from its origin tree. The game defualt is 100 to avoid the possibility of near infinite forest fires. To leave the setting unchanged use a value of -1.
