@@ -1,6 +1,20 @@
 data:extend(
     {
         {
+            name = "tree-fire-max-hope-count",
+            type = "int-setting",
+            default_value = -1,
+            minimum_value = -1,
+            maximum_value = 65535,
+            setting_type = "startup",
+            order = "1001"
+        }
+    }
+)
+
+data:extend(
+    {
+        {
             name = "turn-to-tree-chance-percent",
             type = "int-setting",
             default_value = 100,
